--- a/common/ota_https.yaml
+++ b/common/ota_https.yaml
@@ -10,7 +10,7 @@ update:
     id: update_firmware_sensor
     entity_category: 'diagnostic'
     icon: mdi:update
-    source: https://raw.githubusercontent.com/TheRealFalseReality/aquapi/main/bin/aquapi.manifest.json
+    source: https://therealfalsereality.github.io/aquapi/firmware/aquapi.manifest.json
     web_server:
       sorting_group_id: sorting_group_diagnostic
 
@@ -26,5 +26,5 @@ button:
     on_press: 
       then:
         - ota.http_request.flash:
-            md5_url: https://raw.githubusercontent.com/TheRealFalseReality/aquapi/main/bin/aquapi-esp32.ota.bin.md5
-            url: https://raw.githubusercontent.com/TheRealFalseReality/aquapi/main/bin/aquapi-esp32.ota.bin
+            md5_url: https://therealfalsereality.github.io/aquapi/firmware/aquapi-esp32.ota.bin.md5
+            url: https://therealfalsereality.github.io/aquapi/firmware/aquapi-esp32.ota.bin
