--- a/common/aquapi.yaml
+++ b/common/aquapi.yaml
@@ -1,3 +1,46 @@
+esphome:
+  min_version: 2024.6.0
+  name: "${name}"
+  friendly_name: "${friendly_name}"
+  # Automatically add the mac address to the name
+  name_add_mac_suffix: true
+  comment: "AquaPi ESP32 - Aquarium Controller & Monitor"
+  project:
+    name: therealfalsereality.aquapi
+    version: "${app_version}"
+
+esp32:
+  board: esp32dev
+  framework:
+    type: arduino
+
+dashboard_import:
+  package_import_url: github://TheRealFalseReality/aquapi/aquapi_config.yaml@main
+  import_full_config: false
+
+wifi: 
+  ap:
+
+web_server:
+  version: 3
+  sorting_groups:
+    - id: sorting_group_diagnostic
+      name: "AquaPi Diagnostic"
+      sorting_weight: ${sorting_group_diagnostic_weight}
+    - id: sorting_group_config
+      name: "AquaPi Configuration"
+      sorting_weight: ${sorting_group_config_weight}
+    - id: sorting_group_misc
+      name: "Misc. Sensors"
+      sorting_weight: ${sorting_group_misc_weight}
+
+# i2c Pins
+i2c:
+  sda: ${sdaPin}
+  scl: ${sclPin}
+  scan: true
+  id: bus_a
+
 text_sensor: 
   # AquaPi Version
   - platform: template
