--- a/common/device_base.yaml
+++ b/common/device_base.yaml
@@ -10,31 +10,11 @@ substitutions:
   sorting_group_diagnostic_weight: '98'
   sorting_group_config_weight: '99'
 
-esphome:
-  min_version: 2024.6.0
-  name: "${name}"
-  friendly_name: "${friendly_name}"
-  # Automatically add the mac address to the name
-  name_add_mac_suffix: true
-  comment: "AquaPi ESP32 - Aquarium Controller & Monitor"
-  project:
-    name: TheRealFalseReality.aquapi
-    version: "${app_version}"
-
-esp32:
-  board: esp32dev
-  framework:
-    type: arduino
-
-dashboard_import:
-  package_import_url: github://TheRealFalseReality/aquapi/aquapi_config.yaml@main
-  import_full_config: false
-
 # Enable logging
 logger:
   level: "${logger}"
 
-api:
+# api:
   # actions:
   #   - action: send_ezo_command
   #     variables:
@@ -45,32 +25,9 @@ api:
 ota:
   - platform: esphome
 
-wifi: 
-  ap:
-
 captive_portal:
-
-web_server:
-  version: 3
-  sorting_groups:
-    - id: sorting_group_diagnostic
-      name: "AquaPi Diagnostic"
-      sorting_weight: ${sorting_group_diagnostic_weight}
-    - id: sorting_group_config
-      name: "AquaPi Configuration"
-      sorting_weight: ${sorting_group_config_weight}
-    - id: sorting_group_misc
-      name: "Misc. Sensors"
-      sorting_weight: ${sorting_group_misc_weight}
   
 improv_serial:
-
-# i2c Pins
-i2c:
-  sda: ${sdaPin}
-  scl: ${sclPin}
-  scan: true
-  id: bus_a
 
 # Internal Blue LED
 light:
