--- a/common/aquapi.yaml
+++ b/common/aquapi.yaml
@@ -17,6 +17,7 @@ text_sensor:
     name: "AquaPi Version"
     id: aquapi_version
     icon: mdi:update
+    update_interval: 24h
     lambda: |-
       return {"${app_version}"};
     entity_category: "diagnostic"
@@ -28,6 +29,7 @@ text_sensor:
     name: GitHub
     id: github
     icon: mdi:github
+    update_interval: 24h
     lambda: |-
       return {"github.com/TheRealFalseReality/aquapi"};
     entity_category: "diagnostic"
