--- a/common/binary.yaml
+++ b/common/binary.yaml
@@ -7,7 +7,7 @@ binary_sensor:
     id: binary_pin_1
     disabled_by_default: true
     pin: 
-      number: ${binary_1}
+      number: ${binary_pin_1}
       inverted: true
       mode:
         input: true
