--- a/common/binary_input.yaml
+++ b/common/binary_input.yaml
@@ -8,7 +8,7 @@ binary_sensor:
     id: binary_pin_2
     name: Binary Sensor 2
     pin: 
-      number: ${binarypin1}
+      number: ${binary_pin_2}
       mode:
         input: true
     filters:
@@ -19,7 +19,7 @@ binary_sensor:
     id: binary_pin_3
     name: Binary Sensor 3
     pin: 
-      number: ${binarypin2}
+      number: ${binary_pin_3}
       mode:
         input: true
     filters:
