--- a/common/binary_input.yaml
+++ b/common/binary_input.yaml
@@ -2,6 +2,8 @@
 substitutions:
   binary_pin_2: "18" # yellow 
   binary_pin_3: "19" # blue
+  binary_pin_4: "4" # yellow 
+  binary_pin_5: "17" # blue
 
 binary_sensor:
   - platform: gpio
@@ -22,6 +24,32 @@ binary_sensor:
     name: Binary Sensor 3
     pin: 
       number: ${binary_pin_3}
+      inverted: true
+      mode:
+        pullup: true
+        input: true
+    filters:
+      - delayed_on_off: 30ms
+    web_server:
+      sorting_group_id: sorting_group_misc
+  - platform: gpio
+    id: binary_pin_4
+    name: Binary Sensor 4
+    pin: 
+      number: ${binary_pin_4}
+      inverted: true
+      mode:
+        pullup: true
+        input: true
+    filters:
+      - delayed_on_off: 30ms
+    web_server:
+      sorting_group_id: sorting_group_misc
+  - platform: gpio
+    id: binary_pin_5
+    name: Binary Sensor 5
+    pin: 
+      number: ${binary_pin_5}
       inverted: true
       mode:
         pullup: true
