--- a/common/binary_input.yaml
+++ b/common/binary_input.yaml
@@ -4,6 +4,8 @@ substitutions:
   binary_pin_3: "19" # blue
   binary_pin_4: "4" # yellow 
   binary_pin_5: "17" # blue
+  binary_pin_6: "23" # blue
+
 
 binary_sensor:
   - platform: gpio
@@ -50,6 +52,19 @@ binary_sensor:
     name: Binary Sensor 5
     pin: 
       number: ${binary_pin_5}
+      inverted: true
+      mode:
+        pullup: true
+        input: true
+    filters:
+      - delayed_on_off: 30ms
+    web_server:
+      sorting_group_id: sorting_group_misc
+  - platform: gpio
+    id: binary_pin_6
+    name: Binary Sensor 6
+    pin: 
+      number: ${binary_pin_6}
       inverted: true
       mode:
         pullup: true
